--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
-
+	<header>
+		<nav>
+			<div id="main-logo">
+				<a href=#>
+					<img src="assets/others/tuning_fork.png">
+					<span>Tuning Fork</span>
+				</a>
+			</div>
+		</nav>
+	</header>
 </body>
 </html>
